--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="./qr-code-component-main/images/image-qr-code.png" alt="qr-code" id="qr">
+        <img src="./image-qr-code.png" alt="qr-code" id="qr">
         <p id="blue">Improve your front-end skills by building projects</p>
         <p id="grayish">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
